# HScD_project_03_3_1

./: .gitignore  CMakeLists.txt  Readme.md
includes/: person.hpp
